# git-ai-review

./: .env.example  .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
.github/workflows/: ai-review.yml
gar/: __init__.py  cli.py  formatter.py  git_utils.py  hooks.py  reviewer.py
git_ai_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_git_utils.py  test_reviewer.py
