[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-ai-review"
version = "0.1.0"
description = "AI-powered code review CLI that reads git diff and delivers reviews via the Gemini API"
requires-python = ">=3.10"
authors = [
    {name = "spark142857142857", email = "spark142857@gmail.com"},
]
license = {text = "MIT"}
keywords = ["git", "code-review", "ai", "gemini", "cli", "developer-tools", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/spark142857142857/git-ai-review"
Repository = "https://github.com/spark142857142857/git-ai-review"

[project.scripts]
gar = "gar.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gar*"]
